adds initial taskcluster api
